--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description"
         content="Welcome to Sofia Americano's website. Learn more about Sofia, a front-end developer based in Zurich.">
     <title>Sofia's Portfolio 🍓 - Home</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="src/style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -19,7 +19,7 @@
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Sofia Americano 🍓</a>
-            <button class="navbar-brand" type="button" data-ts-toggle="collapse" data-bs-target="navbarNav"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,10 +29,10 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About me</a>
+                        <a class="nav-link" href="src/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact me</a>
+                        <a class="nav-link" href="src/about.html#contact">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -43,8 +43,8 @@
     <h2>Sofia Americano</h2>
     <h3>🇨🇭 Aspiring front-end developer, based in Zurich</h3>
     <div class="navigation-links">
-        <a href="about.html#contact" class="primary-link">Contact me</a>
-        <a href="about.html" class="secondary-link">About me</a>
+        <a href="src/about.html#contact" class="primary-link">Contact me</a>
+        <a href="src/about.html" class="secondary-link">About me</a>
     </div>
 
     <div class="container">
