Adjust avatar position in navbar

--- a/src/about.html
+++ b/src/about.html
@@ -17,7 +17,11 @@
 <body>
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="../index.html">Sofia Americano 🍓</a>
+            <a class="navbar-brand" href="../index.html">
+                Sofia Americano
+                <img src="/images/avatar.png" alt="Brand image" width="40" height="40"
+                    style="vertical-align: text-top; margin-top: -12px;">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -28,10 +32,10 @@
                         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html">About me</a>
+                        <a class="nav-link" href="src/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="about.html#contact">Contact me</a>
+                        <a class="nav-link" href="src/about.html#contact">Contact me</a>
                     </li>
                 </ul>
             </div>
