--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-..." crossorigin="anonymous" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="index.html">Sofia Americano 🍓</a>
+            <a class="navbar-brand" href="index.html">
+                Sofia Americano
+                <img src="/images/avatar.png" alt="Brand image" width="40" height="40"
+                    style="vertical-align: text-top; margin-top: -12px;">
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -41,7 +44,7 @@
 
     <h1>👋🏻 Hi I am</h1>
     <h2>Sofia Americano</h2>
-    <h3>🇨🇭 Aspiring front-end developer, based in Zurich</h3>
+    <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
     <div class="navigation-links">
         <a href="src/about.html#contact" class="primary-link">Contact me</a>
         <a href="src/about.html" class="secondary-link">About me</a>
