--- a/index.html
+++ b/index.html
@@ -37,23 +37,30 @@
                     <li class="nav-item">
                         <a class="nav-link" href="src/about.html#contact">Contact me</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#image-container">Projects</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <h1>👋🏻 Hi I am</h1>
-    <h2>Sofia Americano</h2>
-    <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
-    <div class="navigation-links">
-        <a href="src/about.html#contact" class="primary-link">Contact me</a>
-        <a href="src/about.html" class="secondary-link">About me</a>
+    <div class="header-section">
+        <div class="container">
+            <h1>👋🏻 Hi I am</h1>
+            <h2>Sofia Americano</h2>
+            <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
+            <div class="navigation-links">
+                <a href="src/about.html#contact" class="primary-link">Contact me</a>
+                <a href="src/about.html" class="secondary-link">About me</a>
+            </div>
+        </div>
     </div>
 
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="image-container">
+                <div id="image-container">
                     <img src="/images/hobby.png" class="img-fluid rounded" alt="Sofia's hobby image">
                 </div>
             </div>
