--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
                         <a class="nav-link" href="src/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="src/about.html#contact">Contact me</a>
+                        <a class="nav-link" href="#image-container">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#image-container">Projects</a>
+                        <a class="nav-link" href="src/about.html#contact">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
 
     <div class="header-section">
         <div class="container">
-            <h1>👋🏻 Hi I am</h1>
+            <h1>👋🏻 Hi, I am</h1>
             <h2>Sofia Americano</h2>
             <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
             <div class="navigation-links">
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div id="image-container">
+                <div class="image-container">
                     <img src="/images/hobby.png" class="img-fluid rounded" alt="Sofia's hobby image">
                 </div>
             </div>
