update HTML code to use IDs for image containers

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <div class="image-container">
+                <div id="image-container">
                     <img src="/images/hobby.png" class="img-fluid rounded" alt="Sofia's hobby image">
                 </div>
             </div>
@@ -100,14 +100,14 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="image-container">
+                <div id="image-container">
                     <img src="images/weather.png" class="img-fluid rounded" alt="Image representing the weather app">
                 </div>
             </div>
         </div>
         <div class="row mt-5">
             <div class="col-md-6">
-                <div class="image-container">
+                <div id="image-container">
                     <img src="images/clock.png" class="img-fluid rounded"
                         alt="Image representing the world clock application">
                 </div>
