update link in navigation bar

--- a/src/about.html
+++ b/src/about.html
@@ -35,11 +35,12 @@
                         <a class="nav-link" href="src/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="src/about.html#contact">Contact me</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="../index.html#image-container">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html#contact">Contact me</a>
+                    </li>
+
                 </ul>
             </div>
         </div>
