--- a/src/about.html
+++ b/src/about.html
@@ -32,7 +32,7 @@
                         <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="src/about.html">About me</a>
+                        <a class="nav-link" href="about.html">About me</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html#image-container">Projects</a>
