--- a/index.html
+++ b/index.html
@@ -45,16 +45,15 @@
         </div>
     </nav>
 
-    <div class="header-section">
-        <div class="container">
-            <h1>👋🏻 Hi, I am</h1>
-            <h2>Sofia Americano</h2>
-            <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
-            <div class="navigation-links">
-                <a href="src/about.html#contact" class="primary-link">Contact me</a>
-                <a href="src/about.html" class="secondary-link">About me</a>
-            </div>
+    <div class="hero">
+        <h1>👋🏻 Hi, I am</h1>
+        <h2>Sofia Americano</h2>
+        <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
+        <div class="navigation-links">
+            <a href="src/about.html#contact" class="primary-link">Contact me</a>
+            <a href="src/about.html" class="secondary-link">About me</a>
         </div>
+        <p class="text-center m-5">Check out some of my featured projects below</p>
     </div>
 
     <div class="container">
