Add Hero section styling with background color, position, and padding

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 Sofia Americano
@@ -53,8 +53,9 @@
             <a href="src/about.html#contact" class="primary-link">Contact me</a>
             <a href="src/about.html" class="secondary-link">About me</a>
         </div>
-        <p class="text-center m-5">Check out some of my featured projects below</p>
     </div>
+
+    <p class="text-center m-5">Check out some of my featured projects below</p>
 
     <div class="container">
         <div class="row">
