--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-..." crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -48,7 +49,7 @@
     <div class="hero">
         <h1>👋🏻 Hi, I am</h1>
         <h2>Sofia Americano</h2>
-        <h3>🇨🇭 Aspiring Front-end developer, based in Zurich</h3>
+        <h3>👩🏻‍💻 Aspiring Front-end developer, based in Zurich</h3>
         <div class="navigation-links">
             <a href="src/about.html#contact" class="primary-link">Contact me</a>
             <a href="src/about.html" class="secondary-link">About me</a>
@@ -147,6 +148,13 @@
         </div>
     </footer>
 
+    <script>
+        $(document).ready(function () {
+            $('.navbar-nav .nav-link').on('click', function () {
+                $('.navbar-collapse').collapse('hide');
+            });
+        });
+    </script>
 </body>
 
 </html>
