--- a/src/about.html
+++ b/src/about.html
@@ -12,6 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
         integrity="sha512-..." crossorigin="anonymous" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 
 <body>
@@ -100,6 +101,15 @@
             </div>
         </div>
     </footer>
+    <script>
+        $(document).ready(function () {
+            // Manipula o evento de clique nos links da navegação
+            $('.navbar-nav .nav-link').on('click', function () {
+                // Fecha a navegação
+                $('.navbar-collapse').collapse('hide');
+            });
+        });
+    </script>
 </body>
 
 </html>
