--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <a class="nav-link" href="src/about.html">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#image-container">Projects</a>
+                        <a class="nav-link" href="#text">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="src/about.html#contact">Contact me</a>
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-    <p class="text-center m-5">Check out some of my featured projects below</p>
+    <p class="text-center m-5" id="text">Check out some of my featured projects below</p>
 
     <div class="container">
         <div class="row">
